# botnode-public

./: CHANGELOG.md  LICENSE  README.md  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: release.yml
.github/workflows_temp/: ci.yml
backend/: CRI_API_FIXED_COMPLETE.py  LAW_V_API_FIXED.py  backend_extensions.py  backend_patch.py  backend_skill_extensions.py  backend_skill_extensions_fixed.py  deploy.py  deploy.sh  docker-compose.full.yml  docker-compose.yml  main_hybrid.py  skill-integration-test.py  skill-registry.json  test.csv  test_skills_module.py
backend/nginx/: nginx.conf
skills/code-reviewer-v1/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
skills/csv-parser-v1/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
skills/diff-analyzer-v1/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
skills/google-search-v1/: .env.example  Dockerfile  README.md  docker-compose.yml  (+1 more)
skills/key-point-extractor-v1/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
skills/key-point-extractor-v1/docs/: contract.md  implementation-playbook.md
skills/key-point-extractor-v1/src/key_point_extractor_v1/: __init__.py  api.py  engine.py  models.py  worker.py
skills/key-point-extractor-v1/tests/: test_api.py  test_contract.py  test_worker.py
skills/notification-router-v1/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
skills/notification-router-v1/docs/: contract.md  implementation-playbook.md
skills/notification-router-v1/examples/: input.sample.json  output.sample.json
skills/notification-router-v1/src/notification_router_v1/: __init__.py  api.py  engine.py  models.py  security.py  worker.py
skills/notification-router-v1/tests/: test_api.py  test_contract.py  test_security.py  test_worker.py
skills/scheduler-v1/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
skills/scheduler-v1/docs/: contract.md  implementation-playbook.md
skills/scheduler-v1/examples/: input.sample.json  output.sample.json
skills/scheduler-v1/src/scheduler_v1/: __init__.py  api.py  engine.py  models.py  security.py  worker.py
skills/scheduler-v1/tests/: test_api.py  test_contract.py  test_security.py  test_worker.py
(+107 files in other folders)
